added HTA name    <h3>Hawai'i Tehchnology Academy</h3>

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
     <div class="header-container">
       <img src="images/hta-logo.png"/>
+      <h3>Hawai'i Tehchnology Academy</h3>
       <h1>Web Application Development</h1>
       <div style="font-size:3em;">2020</div>
       <div>WEB1, WEB2, WEB3, WEB4 (Capstone)</div>
-      <!-- <h3>Hawai'i Tehchnology Academy</h3> -->
     </div>
  
     <p class="rounded AbbeyHalfmann">Abbey Halfmann: <a href="projectPages/Abbey/index.html?hobby=reading&favoriteColor=purple">GameMango</a></p>
